uploading the first code

--- a/index.html
+++ b/index.html
@@ -46,6 +46,23 @@
             </div>
             <button id="show-more">Все новинки</button>
         </section>
+        <section class="trailers-container">
+            <div class="trailers-container-introduction">
+                <h2>Новые трейлеры</h2>
+                <img src="./src/assets/images/trailers.svg" alt="trailers" id="trailers-page">
+            </div>
+            <div class="trailers-container-content">
+                <iframe width="100%" height="765" src="https://www.youtube.com/embed/uyPLu4E45So"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+            </div>
+            <div class="trailers-container-content-likes">
+                
+            </div>
+
+        </section>
     </main>
     <script defer src="./script.js"></script>
 </body>
