new release again

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kinorarea</title>
-    <link rel="stylesheet" href="./node_modules/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="./swiper-bundle.min.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./public/favicon/film-reel.png" type="image/png">
 </head>
@@ -311,7 +311,7 @@
         <span>2020 © Kinoarea. Все права защищены</span>
         <a href="">Политика конфиденциальности</a>
     </footer>
-    <script defer src="./node_modules/swiper/swiper-bundle.min.js"></script>
+    <script defer src="./swiper-bundle.min.js"></script>
     <script type="module" defer src="./script.js"></script>
 </body>
 </html>
